--- a/index.html
+++ b/index.html
@@ -49,53 +49,7 @@
 			</li>
 		</ul>
 
-		<h2>Other writing</h2>
 		
-		<ul>
-			<li><i>October 2021.</i> <b><a href="http://revistes.iec.cat/index.php/reports/article/view/149355">Random walks on supersingular isogeny graphs</a></b>. Reports@SCM.
-			<details><summary>Abstract.</summary>
-			<p>	We survey several aspects of supersingular elliptic curves and their isogeny graphs. Isogeny graphs have obtained attention for the last fifteen years due to their uses in quantum-resistant cryptographic protocols. Studying them involves looking at elliptic curves, quaternion algebras, and random walks on (almost) regular graphs, among other topics. In particular, we give the tools necessary to state the Ramanujan property, connecting supersingular curves in characteristic p with modular forms of level p. We also explain the hash function of Charles, Lauter and Goren as an example of application.</p>
-			</details>
-			</li>
-
-			<li><i>August 2021.</i> <b>Towards a database of isogeny graphs</b>, Extended abstract with Gerard Finol.
-				<details><summary>Abstract.</summary>
-				<p>The extended abstract for our poster in the 2020 BYMAT conference has been published <a href="https://temat.es/monograficos/article/view/vol2-p159">in the conference proceedings</a>.</p>
-				</details>
-			</li>
-	
-			<li><i>July 2021.</i> <b>Abelian surfaces, Siegel modular forms, and the Paramodularity Conjecture</b>. Master's Thesis.
-				<details><summary>Abstract.</summary>
-				<p>I studied abelian varieties and their associated representations and L-functions, in order to connect them to modular forms. The construction of Eichler and Shimura is treated and the statement of modularity for elliptic curves and GL(2)-type abelian varieties is given. Then I moved on to studying Siegel paramodular forms and stated the paramodularity conjecture for abelian surfaces with trivial endomorphism ring. The code written to check the first known case of the conjecture has lots of room for improvement, and I want to rewrite it at some point to improve efficiency (and possibly allow for a full check of paramodularity in level 277). <a href="/assets/TFM/Memoria--TFM--Enric-Florit.pdf">The document can be found here</a>, you can also see my <a href="/assets/TFM/Beamer--TFM--Enric-Florit.pdf">slides</a>.</p>
-				</details>
-			</li>
-				
-			<li><i>November 2020.</i> <b>A database of isogeny graphs</b>. 3rd BYMAT. Poster with Gerard Finol. 
-				<details><summary>Abstract.</summary>
-				<p>We computed genus 1 supersingular isogeny graphs for p up to 30,000 and isogeny degrees 2,3,5,7,11, complementing some of the work done in <a href="https://arxiv.org/abs/1909.07779" target="_blank">Adventures in Supersingularland</a> (Arpin et al., 2019). Some tables with the relevant properties are available from <a href="https://isogenies.enricflorit.com" target="_blank">isogenies.enricflorit.com</a>, and the full database (including adjacency matrices) is available from Zenodo (<a href="https://doi.org/10.5281/zenodo.4303870" target="_blank">DOI 10.5281/zenodo.4304044</a>). We also presented the main ideas as a <a href="https://isogenies.enricflorit.com/assets/isogeny-database-poster.pdf" target="_blank">poster</a> at the <a href="https://twitter.com/bymatconference" target="_blank">third BYMAT conference</a>.</p>
-				</details>
-			</li>
-
-			<li><i>January 2020.</i> <b>Criptografia basada en isogènies</b>. Treball Final de Grau (Bachelor's thesis).
-				<details><summary>Abstract.</summary>
-				<p>The topic of my Bachelor's thesis was isogeny-based cryptography. More specifically, I studied (supersingular) elliptic curves, the SIDH protocol and its basic cryptanalysis.
-				<ul>
-					<li>The written part (in catalan): <a href="http://hdl.handle.net/2445/164891">http://hdl.handle.net/2445/164891</a> or <a href="assets/TFG/Memoria--Criptografia-basada-en-isogenies--Enric-Florit.pdf">here</a>.</li>
-					<li><a href="assets/TFG/Presentacio--Criptografia-basada-en-isogenies--Enric--Florit.pdf">The presentation slides</a> (also in catalan).</li>
-					<li><a href="https://gitlab.com/efz1005/isogenies">Source code</a> (written and documented in english) for the curstom implementation of SIDH and its attacks in Sage. <i>Warning: do not use in production!</i></li>
-					<li><a href="https://isogenies.enricflorit.com/visualizations/index.html">Isogeny Explorer</a>: Understanding isogeny-based cryptography through visualization. Visualizations of supersingular isogeny graphs. To better understand isogeny graphs and to be able to explain them, I made a way to save isogeny graphs in JSON files for visualization with D3.js.</li>
-				</ul>
-				</p>
-				</details>
-			</li>
-
-			<li><i>July 2019.</i> <b>Elliptic curves, Pairings, and the ECDLP</b>. Poster.
-				<details><summary>Abstract.</summary>
-				<p>I had the opportunity to attend a Summer School named "Cryptography meets Graph Theory" (<a href="https://ifm.mathematik.uni-wuerzburg.de/summerschool2019/">more info here</a>) where we were encouraged to present a poster. Mine was about the MOV attack, an algorithm that tries to simplify Discrete Logarithms over Elliptic Curves. You can find the poster <a href="/assets/ECDLP/ECDLP_poster.pdf">here</a>. I also wrote some <a href="/assets/ECDLP/ECDLP_notes.pdf">study notes</a>, although they are <i>very</i> incomplete.</p>
-				</details>
-			</li>
-	
-		</ul>
 
 		<h2>Talks</h2>
 
@@ -146,6 +100,64 @@
 				<p>The people at the Overdrive Hacking Conference asked me to do some talk on cryptograpy, and so I started studying about elliptic curve theory and ECC. During the actual talk I didn't have much time to explain the attack, but it is partially detailed in the slides. The main reference for study was Lawrence Washington's "Elliptic Curves: Number theory and Cryptography". <a href="/assets/p_adic_attacks_on_elliptic_curves.pdf">You can find the slides here (pdf).</a></p>
 				</details>
 			</li>
+		</ul>
+		
+		<h2>Other writing</h2>
+		
+		<ul>
+			<li><i>October 2021.</i> <b><a href="http://revistes.iec.cat/index.php/reports/article/view/149355">Random walks on supersingular isogeny graphs</a></b>. Reports@SCM.
+			<details><summary>Abstract.</summary>
+			<p>	We survey several aspects of supersingular elliptic curves and their isogeny graphs. Isogeny graphs have obtained attention for the last fifteen years due to their uses in quantum-resistant cryptographic protocols. Studying them involves looking at elliptic curves, quaternion algebras, and random walks on (almost) regular graphs, among other topics. In particular, we give the tools necessary to state the Ramanujan property, connecting supersingular curves in characteristic p with modular forms of level p. We also explain the hash function of Charles, Lauter and Goren as an example of application.</p>
+			</details>
+			</li>
+
+			<li><i>August 2021.</i> <b>Towards a database of isogeny graphs</b>, Extended abstract with Gerard Finol.
+				<details><summary>Abstract.</summary>
+				<p>The extended abstract for our poster in the 2020 BYMAT conference has been published <a href="https://temat.es/monograficos/article/view/vol2-p159">in the conference proceedings</a>.</p>
+				</details>
+			</li>
+	
+			<li><i>July 2021.</i> <b>Abelian surfaces, Siegel modular forms, and the Paramodularity Conjecture</b>. Master's Thesis.
+				<details><summary>Abstract.</summary>
+				<p>I studied abelian varieties and their associated representations and L-functions, in order to connect them to modular forms. The construction of Eichler and Shimura is treated and the statement of modularity for elliptic curves and GL(2)-type abelian varieties is given. Then I moved on to studying Siegel paramodular forms and stated the paramodularity conjecture for abelian surfaces with trivial endomorphism ring. The code written to check the first known case of the conjecture has lots of room for improvement, and I want to rewrite it at some point to improve efficiency (and possibly allow for a full check of paramodularity in level 277). <a href="/assets/TFM/Memoria--TFM--Enric-Florit.pdf">The document can be found here</a>, you can also see my <a href="/assets/TFM/Beamer--TFM--Enric-Florit.pdf">slides</a>.</p>
+				</details>
+			</li>
+				
+			<li><i>November 2020.</i> <b>A database of isogeny graphs</b>. 3rd BYMAT. Poster with Gerard Finol. 
+				<details><summary>Abstract.</summary>
+				<p>We computed genus 1 supersingular isogeny graphs for p up to 30,000 and isogeny degrees 2,3,5,7,11, complementing some of the work done in <a href="https://arxiv.org/abs/1909.07779" target="_blank">Adventures in Supersingularland</a> (Arpin et al., 2019). Some tables with the relevant properties are available from <a href="https://isogenies.enricflorit.com" target="_blank">isogenies.enricflorit.com</a>, and the full database (including adjacency matrices) is available from Zenodo (<a href="https://doi.org/10.5281/zenodo.4303870" target="_blank">DOI 10.5281/zenodo.4304044</a>). We also presented the main ideas as a <a href="https://isogenies.enricflorit.com/assets/isogeny-database-poster.pdf" target="_blank">poster</a> at the <a href="https://twitter.com/bymatconference" target="_blank">third BYMAT conference</a>.</p>
+				</details>
+			</li>
+
+			<li><i>January 2020.</i> <b>Criptografia basada en isogènies</b>. Treball Final de Grau (Bachelor's thesis).
+				<details><summary>Abstract.</summary>
+				<p>The topic of my Bachelor's thesis was isogeny-based cryptography. More specifically, I studied (supersingular) elliptic curves, the SIDH protocol and its basic cryptanalysis.
+				<ul>
+					<li>The written part (in catalan): <a href="http://hdl.handle.net/2445/164891">http://hdl.handle.net/2445/164891</a> or <a href="assets/TFG/Memoria--Criptografia-basada-en-isogenies--Enric-Florit.pdf">here</a>.</li>
+					<li><a href="assets/TFG/Presentacio--Criptografia-basada-en-isogenies--Enric--Florit.pdf">The presentation slides</a> (also in catalan).</li>
+					<li><a href="https://gitlab.com/efz1005/isogenies">Source code</a> (written and documented in english) for the curstom implementation of SIDH and its attacks in Sage. <i>Warning: do not use in production!</i></li>
+					<li><a href="https://isogenies.enricflorit.com/visualizations/index.html">Isogeny Explorer</a>: Understanding isogeny-based cryptography through visualization. Visualizations of supersingular isogeny graphs. To better understand isogeny graphs and to be able to explain them, I made a way to save isogeny graphs in JSON files for visualization with D3.js.</li>
+				</ul>
+				</p>
+				</details>
+			</li>
+
+			<li><i>July 2019.</i> <b>Elliptic curves, Pairings, and the ECDLP</b>. Poster.
+				<details><summary>Abstract.</summary>
+				<p>I had the opportunity to attend a Summer School named "Cryptography meets Graph Theory" (<a href="https://ifm.mathematik.uni-wuerzburg.de/summerschool2019/">more info here</a>) where we were encouraged to present a poster. Mine was about the MOV attack, an algorithm that tries to simplify Discrete Logarithms over Elliptic Curves. You can find the poster <a href="/assets/ECDLP/ECDLP_poster.pdf">here</a>. I also wrote some <a href="/assets/ECDLP/ECDLP_notes.pdf">study notes</a>, although they are <i>very</i> incomplete.</p>
+				</details>
+			</li>
+		</ul>
+
+
+		<h2>Seminars</h2>
+
+		I have been involved with the following seminars and study groups:
+
+		<ul>
+			<li><a href="https://roberto-gualdi.staff.upc.edu/documents/BNTSG24_program.pdf">Rational points on curves of high genus</a>, Spring 2024.</li>
+			<li><a href="https://www.ub.edu/nt/ffite/LS-SS23.pdf">Learning seminar on Quadratic Chabauty</a>, Spring 2023.</li>
+			<li>Learning seminar on Automorphic Forms, Spring 2022.</li>
 		</ul>
 	</section>
 </body>
