--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 		<h2>Publications and preprints</h2>
 
 		<ul id="publications">
+			<li>Arnau Gàmez-Montolio, Enric Florit, Martin Brain, Jacob M. Howe. <b>Efficient Normalized Reduction and Generation of Equivalent Multivariate Binary Polynomials.</b>  Workshop on Binary Analysis Research (BAR 2024)
+			</li>
+
 			<li>Fité, F.; Florit, E.; Guitart, X. <b>Endomorphism algebras of geometrically split genus 2 Jacobians over Q.</b> Preprint [<a href="https://arxiv.org/abs/2212.11102" target="_blank">arXiv</a>]
 			<details>
 				<summary>Abstract.</summary>
