--- a/index.html
+++ b/index.html
@@ -28,6 +28,28 @@
 
 		<ul id="publications">
 			<li>Arnau Gàmez-Montolio, Enric Florit, Martin Brain, Jacob M. Howe. <b>Efficient Normalized Reduction and Generation of Equivalent Multivariate Binary Polynomials.</b>  Workshop on Binary Analysis Research (BAR 2024)
+			<details>
+				<summary>Abstract.</summary>
+				<p>Polynomials over fixed-width binary numbers
+					(bytes, Z/2^w Z, bit-vectors, etc.) appear widely in computer
+					science including obfuscation and reverse engineering, pro-
+					gram analysis, automated theorem proving, verification, error-
+					correcting codes and cryptography. As some fixed-width binary
+					numbers do not have reciprocals, these polynomials behave
+					differently to those normally studied in mathematics. In par-
+					ticular, polynomial equality is harder to determine; polynomials
+					having different coefficients is not sufficient to show they always
+					compute different values. Determining polynomial equality is a
+					fundamental building block for most symbolic algorithms. For
+					larger widths or multivariate polynomials, checking all inputs is
+					computationally infeasible. This paper presents a study of the
+					mathematical structure of null polynomials (those that evaluate
+					to 0 for all inputs) and uses this to develop efficient algorithms
+					to reduce polynomials to a normalized form. Polynomials in such
+					normalized form are equal if and only if their coefficients are
+					equal. This is a key building block for more mathematically so-
+					phisticated approaches to a wide range of fundamental problems.</p>
+			</details>
 			</li>
 
 			<li>Fité, F.; Florit, E.; Guitart, X. <b>Endomorphism algebras of geometrically split genus 2 Jacobians over Q.</b> Preprint [<a href="https://arxiv.org/abs/2212.11102" target="_blank">arXiv</a>]
