--- a/index.html
+++ b/index.html
@@ -32,12 +32,9 @@
 				<summary>Abstract.</summary>
 				<p>Polynomials over fixed-width binary numbers
 					(bytes, Z/2^w Z, bit-vectors, etc.) appear widely in computer
-					science including obfuscation and reverse engineering, pro-
-					gram analysis, automated theorem proving, verification, error-
-					correcting codes and cryptography. As some fixed-width binary
+					science including obfuscation and reverse engineering, program analysis, automated theorem proving, verification, error-correcting codes and cryptography. As some fixed-width binary
 					numbers do not have reciprocals, these polynomials behave
-					differently to those normally studied in mathematics. In par-
-					ticular, polynomial equality is harder to determine; polynomials
+					differently to those normally studied in mathematics. In particular, polynomial equality is harder to determine; polynomials
 					having different coefficients is not sufficient to show they always
 					compute different values. Determining polynomial equality is a
 					fundamental building block for most symbolic algorithms. For
@@ -47,8 +44,7 @@
 					to 0 for all inputs) and uses this to develop efficient algorithms
 					to reduce polynomials to a normalized form. Polynomials in such
 					normalized form are equal if and only if their coefficients are
-					equal. This is a key building block for more mathematically so-
-					phisticated approaches to a wide range of fundamental problems.</p>
+					equal. This is a key building block for more mathematically sophisticated approaches to a wide range of fundamental problems.</p>
 			</details>
 			</li>
 
