New preprint + BAR paper

--- a/index.html
+++ b/index.html
@@ -27,7 +27,14 @@
 		<h2>Publications and preprints</h2>
 
 		<ul id="publications">
-			<li>Arnau Gàmez-Montolio, Enric Florit, Martin Brain, Jacob M. Howe. <b>Efficient Normalized Reduction and Generation of Equivalent Multivariate Binary Polynomials.</b>  Workshop on Binary Analysis Research (BAR 2024)
+			<li>Florit, E. <b>Abelian varieties that split modulo all but finitely many primes.</b> Preprint [<a href="https://arxiv.org/abs/2404.08496">arXiv</a>]
+			<details>
+				<summary>Abstract.</summary>
+				<p>Let A be a simple abelian variety over a number field k such that End(A) is noncommutative. We show that A splits modulo all but finitely many primes of k. We prove this by considering the subalgebras of End(A_p)⊗Q which have prime Schur index. Our main tools are Tate's characterization of endomorphism algebras of abelian varieties over finite fields, and a Theorem of Chia-Fu Yu on embeddings of simple algebras.</p>
+			</details>
+			</li>
+
+			<li>Gàmez-Montolio, A; Florit, E; Brain, M; Howe, J. M. <b>Efficient Normalized Reduction and Generation of Equivalent Multivariate Binary Polynomials.</b>  Workshop on Binary Analysis Research (BAR 2024) [<a href="https://openaccess.city.ac.uk/id/eprint/32695/">eprint</a>]
 			<details>
 				<summary>Abstract.</summary>
 				<p>Polynomials over fixed-width binary numbers
