--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 		<h2>Talks</h2>
 
 		<ul id="materials">
-			<li><i>February 2024.</i> <b>On simple reductions of abelian varieties.</b> <a href="stnb.cat/en/seminaris/2024/">37th Seminari de Teoria de Nombres de Barcelona</a>.</li>
+			<li><i>February 2024.</i> <b>On simple reductions of abelian varieties.</b> <a href="http://stnb.cat/en/seminaris/2024/">37th Seminari de Teoria de Nombres de Barcelona</a>.</li>
 
 			<li><i>November 2023.</i> <b>Isogeny graphs and isogeny cryptography.</b> Seminário do Grupo de Álgebra e Geometria, Universidade de Aveiro.</li>
 
