add warning for sidh

--- a/index.html
+++ b/index.html
@@ -160,6 +160,8 @@
 			<li><i>January 2020.</i> <b>Criptografia basada en isogènies</b>. Treball Final de Grau (Bachelor's thesis).
 				<details><summary>Abstract.</summary>
 				<p>The topic of my Bachelor's thesis was isogeny-based cryptography. More specifically, I studied (supersingular) elliptic curves, the SIDH protocol and its basic cryptanalysis.
+					<br>
+					<b>Update:</b> the field has advanced a lot since I did this project, in particular, SIDH has been completely broken. If you are interested in this, look for the papers by Castryck, Decru, Maino, Martindale and Robert.
 				<ul>
 					<li>The written part (in catalan): <a href="http://hdl.handle.net/2445/164891">http://hdl.handle.net/2445/164891</a> or <a href="assets/TFG/Memoria--Criptografia-basada-en-isogenies--Enric-Florit.pdf">here</a>.</li>
 					<li><a href="assets/TFG/Presentacio--Criptografia-basada-en-isogenies--Enric--Florit.pdf">The presentation slides</a> (also in catalan).</li>
