--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 		<h2>Talks</h2>
 
 		<ul id="materials">
+			<li><i>July 2024.</i> <b>Abelian varieties that split modulo all but finitely many primes.</b> Décimas Jornadas de Teoría de Números, Madrid (<a href="/assets/JTN2024.pdf">slides</a>).</li>
 			<li><i>February 2024.</i> <b>On simple reductions of abelian varieties.</b> <a href="http://stnb.cat/en/seminaris/2024/">37th Seminari de Teoria de Nombres de Barcelona</a>.</li>
 
 			<li><i>November 2023.</i> <b>Isogeny graphs and isogeny cryptography.</b> Seminário do Grupo de Álgebra e Geometria, Universidade de Aveiro.</li>
