--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			</details>
 			</li>
 
-			<li>Gàmez-Montolio, A; Florit, E; Brain, M; Howe, J. M. <b>Efficient Normalized Reduction and Generation of Equivalent Multivariate Binary Polynomials.</b>  Workshop on Binary Analysis Research (BAR 2024) [<a href="https://openaccess.city.ac.uk/id/eprint/32695/">eprint</a>]
+			<li>Gàmez-Montolio, A; Florit, E; Brain, M; Howe, J. M. <b>Efficient Normalized Reduction and Generation of Equivalent Multivariate Binary Polynomials.</b>  Workshop on Binary Analysis Research (BAR 2024) [<a href="https://www.ndss-symposium.org/ndss-paper/auto-draft-436/">proceedings</a>, <a href="https://openaccess.city.ac.uk/id/eprint/32695/">eprint</a>]
 			<details>
 				<summary>Abstract.</summary>
 				<p>Polynomials over fixed-width binary numbers
