--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
 		<h2>Publications and preprints</h2>
 
 		<ul id="publications">
+			<li>Florit, E.; Pacetti, A. <b>K-varieties and Galois representations.</b> Preprint [<a href="https://arxiv.org/abs/2412.03184">arXiv</a>]
+			<details>
+				<summary>Abstract.</summary>
+				<p>In a remarkable article Ribet showed how to attach rational 2-dimensional representations to elliptic ℚ-curves. An abelian variety A is a (weak) K-variety if it is isogenous to all of its GalK-conjugates. In this article we study the problem of attaching an absolutely irreducible ℓ-adic representation of GalK to an abelian K-variety, which sometimes has smaller dimension than expected. When possible, we also construct a Galois-equivariant pairing, which restricts the image of this representation. As an application of our construction, we prove modularity of abelian surfaces over ℚ with potential quaternionic multiplication. </p>
+			</details>
+			</li>
 			<li>Florit, E. <b>Abelian varieties that split modulo all but finitely many primes.</b> To appear in Proc. AMS [<a href="https://arxiv.org/abs/2404.08496">arXiv</a>]
 			<details>
 				<summary>Abstract.</summary>
