--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		
 		<p>I am currently working on abelian varieties of GL(4)-type and their conjectural connection to Siegel paramodular forms.</p>
 
-		<p>Here you will find a growing (and at times, incomplete) list of my projects. In the <b>materials</b> section you'll find some slides for talks I have given. This website is updated once every few months, mostly when I have some new material to share.</p>
+		<p>Here you will find a growing (and at times, incomplete) list of my projects. You will also find some slides for talks I have given. This website is updated once every few months, mostly when I have some new material to share.</p>
 		<p>My email address is: enricflorit at ub dot edu.</p>
 		<p>Some links:</p>
 		<ul class="left">
@@ -27,11 +27,17 @@
 		<h2>Publications and preprints</h2>
 
 		<ul id="publications">
+			<li>Fité, F.; Florit, E.; Guitart, X. <b>Abelian varieties genuinely of GL<sub>n</sub>-type.</b> Preprint [<a href="https://arxiv.org/abs/2412.21183">arXiv</a>]
+				<details>
+					<summary>Abstract.</summary>
+					<p>	A simple abelian variety A defined over a number field k is called of GL<sub>n</sub>-type if there exists a number field of degree 2dim(A)/n which is a subalgebra of End<sup>0</sup>(A). We say that A is genuinely of GL<sub>n</sub>-type if its base change A<sub style="text-decoration: overline">k</sub> contains no isogeny factor of GL<sub>m</sub>-type for m&le;n. This generalizes the classical notion of abelian variety of GL<sub>2</sub>-type without potential complex multiplication introduced by Ribet. We develop a theory of building blocks, inner twists and nebentypes for these varieties. When the center of End<sup>0</sup>(A) is totally real, Chi, Banaszak, Gajda, and Krasoń have attached to A a compatible system of Galois representations of degree n which is either symplectic or orthogonal. We extend their results under the weaker assumption that the center of End<sup>0</sup>(A<sub style="text-decoration: overline">k</sub>) be totally real. We conclude the article by showing an explicit family of abelian fourfolds genuinely of GL<sub>4</sub>-type. This involves the construction of a family of genus 2 curves defined over a quadratic field whose Jacobian has trivial endomorphism ring and is isogenous to its Galois conjugate. </p>
+				</details>
+			</li>
 			<li>Florit, E.; Pacetti, A. <b>K-varieties and Galois representations.</b> Preprint [<a href="https://arxiv.org/abs/2412.03184">arXiv</a>]
-			<details>
-				<summary>Abstract.</summary>
-				<p>In a remarkable article Ribet showed how to attach rational 2-dimensional representations to elliptic ℚ-curves. An abelian variety A is a (weak) K-variety if it is isogenous to all of its GalK-conjugates. In this article we study the problem of attaching an absolutely irreducible ℓ-adic representation of GalK to an abelian K-variety, which sometimes has smaller dimension than expected. When possible, we also construct a Galois-equivariant pairing, which restricts the image of this representation. As an application of our construction, we prove modularity of abelian surfaces over ℚ with potential quaternionic multiplication. </p>
-			</details>
+				<details>
+					<summary>Abstract.</summary>
+					<p>In a remarkable article Ribet showed how to attach rational 2-dimensional representations to elliptic ℚ-curves. An abelian variety A is a (weak) K-variety if it is isogenous to all of its GalK-conjugates. In this article we study the problem of attaching an absolutely irreducible ℓ-adic representation of GalK to an abelian K-variety, which sometimes has smaller dimension than expected. When possible, we also construct a Galois-equivariant pairing, which restricts the image of this representation. As an application of our construction, we prove modularity of abelian surfaces over ℚ with potential quaternionic multiplication. </p>
+				</details>
 			</li>
 			<li>Florit, E. <b>Abelian varieties that split modulo all but finitely many primes.</b> To appear in Proc. AMS [<a href="https://arxiv.org/abs/2404.08496">arXiv</a>]
 			<details>
@@ -89,6 +95,7 @@
 
 		<ul id="materials">
 			<li><i>July 2024.</i> <b>Abelian varieties that split modulo all but finitely many primes.</b> Décimas Jornadas de Teoría de Números, Madrid (<a href="/assets/JTN2024.pdf">slides</a>).</li>
+			
 			<li><i>February 2024.</i> <b>On simple reductions of abelian varieties.</b> <a href="http://stnb.cat/en/seminaris/2024/">37th Seminari de Teoria de Nombres de Barcelona</a>.</li>
 
 			<li><i>November 2023.</i> <b>Isogeny graphs and isogeny cryptography.</b> Seminário do Grupo de Álgebra e Geometria, Universidade de Aveiro.</li>
@@ -97,7 +104,7 @@
 
 			<li><i>June 2022.</i> <b>Abelian varieties of GL(4) type.</b>  <a href="https://www.unirioja.es/dptos/dmc/jtn2022/index.html">Novenas Jornadas de Teoría de Números</a>.</li>
 
-			<li><i>May 2022.</i> <b>Let's twist again: the problem with fake abelian surfaces.</b> <a href="http://www.ub.edu/simba/en/index.html">SIMBa Seminar</a>.</li>
+			<li><i>May 2022.</i> <b>Let's twist again: the problem with fake abelian surfaces.</b> <a href="http://www.ub.edu/simba/en/index.html">SIMBa Seminar</a>.
 			<details><summary>Abstract.</summary>
 				<p> The paramodularity conjecture of Brumer and Kramer proposes a connection between abelian surfaces and Siegel paramodular forms. In this correspondence there are some restrictions, for example, we ask that all the eigenvalues of a paramodular form are in Q. In theory, these forms could also correspond to fake surfaces, which are abelian fourfolds with quaternionic multiplication. This motivates the study of abelian varieties whose l-adic representations have dimension 4, which is the case of abelian surfaces. 	 	
 				<br>
@@ -105,6 +112,7 @@
 				
 			 </p>
 			</details>
+			</li>
 
 			<li><i>July 2020.</i> <b>Random walks in genus 2 isogeny graphs</b>, with Ben Smith. ANTS XIV Rump Session (<a href="https://math.mit.edu/~drew/ANTSXIV/RumpFlorit.pdf">slides</a>).</li>
 
