Fix typo in abstract

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<li>Fité, F.; Florit, E.; Guitart, X. <b>Abelian varieties genuinely of GL<sub>n</sub>-type.</b> Preprint [<a href="https://arxiv.org/abs/2412.21183">arXiv</a>]
 				<details>
 					<summary>Abstract.</summary>
-					<p>	A simple abelian variety A defined over a number field k is called of GL<sub>n</sub>-type if there exists a number field of degree 2dim(A)/n which is a subalgebra of End<sup>0</sup>(A). We say that A is genuinely of GL<sub>n</sub>-type if its base change A<sub style="text-decoration: overline">k</sub> contains no isogeny factor of GL<sub>m</sub>-type for m&le;n. This generalizes the classical notion of abelian variety of GL<sub>2</sub>-type without potential complex multiplication introduced by Ribet. We develop a theory of building blocks, inner twists and nebentypes for these varieties. When the center of End<sup>0</sup>(A) is totally real, Chi, Banaszak, Gajda, and Krasoń have attached to A a compatible system of Galois representations of degree n which is either symplectic or orthogonal. We extend their results under the weaker assumption that the center of End<sup>0</sup>(A<sub style="text-decoration: overline">k</sub>) be totally real. We conclude the article by showing an explicit family of abelian fourfolds genuinely of GL<sub>4</sub>-type. This involves the construction of a family of genus 2 curves defined over a quadratic field whose Jacobian has trivial endomorphism ring and is isogenous to its Galois conjugate. </p>
+					<p>	A simple abelian variety A defined over a number field k is called of GL<sub>n</sub>-type if there exists a number field of degree 2dim(A)/n which is a subalgebra of End<sup>0</sup>(A). We say that A is genuinely of GL<sub>n</sub>-type if its base change A<sub style="text-decoration: overline">k</sub> contains no isogeny factor of GL<sub>m</sub>-type for m&lt;n. This generalizes the classical notion of abelian variety of GL<sub>2</sub>-type without potential complex multiplication introduced by Ribet. We develop a theory of building blocks, inner twists and nebentypes for these varieties. When the center of End<sup>0</sup>(A) is totally real, Chi, Banaszak, Gajda, and Krasoń have attached to A a compatible system of Galois representations of degree n which is either symplectic or orthogonal. We extend their results under the weaker assumption that the center of End<sup>0</sup>(A<sub style="text-decoration: overline">k</sub>) be totally real. We conclude the article by showing an explicit family of abelian fourfolds genuinely of GL<sub>4</sub>-type. This involves the construction of a family of genus 2 curves defined over a quadratic field whose Jacobian has trivial endomorphism ring and is isogenous to its Galois conjugate. </p>
 				</details>
 			</li>
 			<li>Florit, E.; Pacetti, A. <b>K-varieties and Galois representations.</b> Preprint [<a href="https://arxiv.org/abs/2412.03184">arXiv</a>]
@@ -95,7 +95,7 @@
 
 		<ul id="materials">
 			<li><i>July 2024.</i> <b>Abelian varieties that split modulo all but finitely many primes.</b> Décimas Jornadas de Teoría de Números, Madrid (<a href="/assets/JTN2024.pdf">slides</a>).</li>
-			
+
 			<li><i>February 2024.</i> <b>On simple reductions of abelian varieties.</b> <a href="http://stnb.cat/en/seminaris/2024/">37th Seminari de Teoria de Nombres de Barcelona</a>.</li>
 
 			<li><i>November 2023.</i> <b>Isogeny graphs and isogeny cryptography.</b> Seminário do Grupo de Álgebra e Geometria, Universidade de Aveiro.</li>
