--- a/index.html
+++ b/index.html
@@ -200,9 +200,10 @@
 		I have been involved with the following seminars and study groups:
 
 		<ul>
+			<li><a href="http://www.ub.edu/nt/ffite/LS-LS25.pdf">Serre's open image theorem</a>, Spring 2025.</li>
 			<li><a href="https://roberto-gualdi.staff.upc.edu/documents/BNTSG24_program.pdf">Rational points on curves of high genus</a>, Spring 2024.</li>
 			<li><a href="https://www.ub.edu/nt/ffite/LS-SS23.pdf">Learning seminar on Quadratic Chabauty</a>, Spring 2023.</li>
-			<li>Learning seminar on Automorphic Forms, Spring 2022.</li>
+			<li><a href="http://www.ub.edu/nt/ffite/LS-WS21.pdf">Learning seminar on Automorphic Forms</a>, Spring 2022.</li>
 		</ul>
 	</section>
 </body>
