Update proc ams reference

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<p>In a remarkable article Ribet showed how to attach rational 2-dimensional representations to elliptic ℚ-curves. An abelian variety A is a (weak) K-variety if it is isogenous to all of its GalK-conjugates. In this article we study the problem of attaching an absolutely irreducible ℓ-adic representation of GalK to an abelian K-variety, which sometimes has smaller dimension than expected. When possible, we also construct a Galois-equivariant pairing, which restricts the image of this representation. As an application of our construction, we prove modularity of abelian surfaces over ℚ with potential quaternionic multiplication. </p>
 				</details>
 			</li>
-			<li>Florit, E. <b>Abelian varieties that split modulo all but finitely many primes.</b> Proc. AMS [<a href="https://arxiv.org/abs/2404.08496">arXiv</a>, <a href="https://doi.org/10.1090/proc/17104">journal</a>]
+			<li>Florit, E. <b>Abelian varieties that split modulo all but finitely many primes.</b> Proc. Amer. Math. Soc. 153 (2025), 1491-1499 [<a href="https://arxiv.org/abs/2404.08496">arXiv</a>, <a href="https://doi.org/10.1090/proc/17104">journal</a>]
 			<details>
 				<summary>Abstract.</summary>
 				<p>Let A be a simple abelian variety over a number field k such that End(A) is noncommutative. We show that A splits modulo all but finitely many primes of k. We prove this by considering the subalgebras of End(A_p)⊗Q which have prime Schur index. Our main tools are Tate's characterization of endomorphism algebras of abelian varieties over finite fields, and a Theorem of Chia-Fu Yu on embeddings of simple algebras.</p>
