--- a/index.html
+++ b/index.html
@@ -99,12 +99,13 @@
 			<li><i>February 2025.</i> <b>Abelian varieties genuinely of GL(n)-type</b> <a href="http://stnb.cat/en/seminaris/2025/">38th Seminari de Teoria de Nombres de Barcelona</a>.</li>
 
 			<li><i>2024.</i> <b>Abelian varieties that split modulo all but finitely many primes.</b> 
-				<li>
-					<i>Décimas Jornadas de Teoría de Números, Madrid (<a href="/assets/JTN2024.pdf">slides</a>).</i>
-					<i>Seminari de Geometria Algebraica de Barcelona, UB.</i>
-					<i>Math SOMMa Junior Meeting, CRM, Barcelona.</i>
-					<i>VII Congreso de Jóvenes Investigadores de la RSME, Bilbao.</i>
-				</li></li>
+				<ul>
+					<li>Décimas Jornadas de Teoría de Números, Madrid (<a href="/assets/JTN2024.pdf">slides</a>).</li>
+					<li>Seminari de Geometria Algebraica de Barcelona, UB.</li>
+					<li>Math SOMMa Junior Meeting, CRM, Barcelona.</li>
+					<li>VII Congreso de Jóvenes Investigadores de la RSME, Bilbao.</li>
+				</ul>
+			</li>
 
 			<li><i>February 2024.</i> <b>On simple reductions of abelian varieties.</b> <a href="http://stnb.cat/en/seminaris/2024/">37th Seminari de Teoria de Nombres de Barcelona</a>.</li>
 
