Better date format

--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
 
 			<li><i>February 2025.</i> <b>Abelian varieties genuinely of GL(n)-type</b> <a href="http://stnb.cat/en/seminaris/2025/">38th Seminari de Teoria de Nombres de Barcelona</a>.</li>
 
-			<li><i>2024.</i> <b>Abelian varieties that split modulo all but finitely many primes.</b> 
+			<li><b>Abelian varieties that split modulo all but finitely many primes.</b> 
 				<ul>
-					<li>Décimas Jornadas de Teoría de Números, Madrid (<a href="/assets/JTN2024.pdf">slides</a>).</li>
-					<li>Seminari de Geometria Algebraica de Barcelona, UB.</li>
-					<li>Math SOMMa Junior Meeting, CRM, Barcelona.</li>
-					<li>VII Congreso de Jóvenes Investigadores de la RSME, Bilbao.</li>
+					<li><i>July 2024.</i> Décimas Jornadas de Teoría de Números, Madrid (<a href="/assets/JTN2024.pdf">slides</a>).</li>
+					<li><i>October 2024.</i> Seminari de Geometria Algebraica de Barcelona, UB.</li>
+					<li><i>October 2024.</i> Math SOMMa Junior Meeting, CRM, Barcelona.</li>
+					<li><i>January 2025.</i> VII Congreso de Jóvenes Investigadores de la RSME, Bilbao.</li>
 				</ul>
 			</li>
 
