--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
 		<h2>Talks</h2>
 
 		<ul id="materials">
-			<li><i>April 2025.</i> <b>Quaternionic multiplication and abelian fourfolds</b> <a href="http://www.cig.udl.cat/SQIparty2025_home">The SQIParty: a Workshop on Isogeny-Crypto</a>, Lleida.</li>
+			<li><i>April 2025.</i> <b>Quaternionic multiplication and abelian fourfolds.</b> <a href="http://www.cig.udl.cat/SQIparty2025_home">The SQIParty: a Workshop on Isogeny-Crypto</a>, Lleida.</li>
 
-			<li><i>February 2025.</i> <b>Abelian varieties genuinely of GL(n)-type</b> <a href="http://stnb.cat/en/seminaris/2025/">38th Seminari de Teoria de Nombres de Barcelona</a>.</li>
+			<li><i>February 2025.</i> <b>Abelian varieties genuinely of GL(n)-type.</b> <a href="http://stnb.cat/en/seminaris/2025/">38th Seminari de Teoria de Nombres de Barcelona</a>.</li>
 
 			<li><b>Abelian varieties that split modulo all but finitely many primes.</b> 
 				<ul>
