--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 
 			<li><b>Abelian varieties that split modulo all but finitely many primes.</b> 
 				<ul>
-					<li><i>July 2024.</i> Décimas Jornadas de Teoría de Números, Madrid (<a href="/assets/JTN2024.pdf">slides</a>).</li>
-					<li><i>October 2024.</i> Seminari de Geometria Algebraica de Barcelona, UB.</li>
+					<li><i>July 2024.</i> Décimas Jornadas de Teoría de Números, UAM-ICMAT, Madrid (<a href="/assets/JTN2024.pdf">slides</a>).</li>
+					<li><i>October 2024.</i> Seminari de Geometria Algebraica de Barcelona, UB, Barcelona.</li>
 					<li><i>October 2024.</i> Math SOMMa Junior Meeting, CRM, Barcelona.</li>
 					<li><i>January 2025.</i> VII Congreso de Jóvenes Investigadores de la RSME, Bilbao.</li>
 				</ul>
