--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
 		<h2>Talks</h2>
 
 		<ul id="materials">
+			<li><i>Oct. 2025.</i> <b>Endomorphism algebras of Siegel-modular abelian varieties.</b> Number Theory Seminar at UAM, Madrid.</li>
+			<li><i>July 2025.</i> <b>Modularity of abelian surfaces with potential QM.</b> 33èmes Journées arithmétiques, Luxembourgi (<a href="/assets/JA2025.pdf">slides</a>).</li>
 			<li><i>April 2025.</i> <b>Quaternionic multiplication and abelian fourfolds.</b> <a href="http://www.cig.udl.cat/SQIparty2025_home">The SQIParty: a Workshop on Isogeny-Crypto</a>, Lleida.</li>
 
 			<li><i>February 2025.</i> <b>Abelian varieties genuinely of GL(n)-type.</b> <a href="http://stnb.cat/en/seminaris/2025/">38th Seminari de Teoria de Nombres de Barcelona</a>.</li>
